--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,7 +2,8 @@
 $body-bg: #fff;
 
 // Typography
-$font-family-sans-serif: 'Acumin',
+//$font-family-sans-serif: 'Acumin', sans-serif;
+$font-family-sans-serif: 'Roboto',
 sans-serif;
 $font-size-base  : 1rem;
 $line-height-base: 1.6;
