--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,5 +4,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Owl Carousel
+@import '~owl.carousel/dist/assets/owl.carousel.min.css';
+@import '~owl.carousel/dist/assets/owl.theme.default.min.css';
+
 // FM Benfica
-@import 'fmbenfica'; 
+@import 'fmbenfica';
