--- a/resources/sass/_fmbenfica.scss
+++ b/resources/sass/_fmbenfica.scss
@@ -52,4 +52,383 @@
             }
         }
     }
+
+    .navbar {
+        & .nav-item {
+
+            &.active,
+            &:hover {
+                border-bottom: 3px solid #df0080;
+            }
+
+            & .nav-link {
+                font-size: 1.2rem;
+                color    : #647b8d;
+                padding  : .2rem 1rem;
+
+            }
+        }
+    }
+
+}
+
+.hero {
+    & .carousel-item {
+        background-position: center;
+        background-repeat  : no-repeat;
+        background-size    : cover;
+        height             : 600px;
+    }
+
+    &__radio {
+        position  : relative;
+        background: #00a3e4;
+        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+
+        &-button {
+            position       : relative;
+            display        : flex;
+            align-items    : center;
+            justify-content: center;
+            padding        : 1rem;
+            text-align     : center;
+            vertical-align : middle;
+            cursor         : pointer;
+
+            & svg {
+                margin-right: .5rem;
+            }
+        }
+
+        &-button.bg-white span {
+            color: #00a3e4;
+        }
+
+        &-button.bg-white svg>g>g {
+            fill: #00a3e4 !important;
+        }
+
+        & span {
+            font-size  : 3rem;
+            font-weight: 900;
+            line-height: 1;
+            color      : #FFF;
+        }
+    }
+}
+
+.programing {
+    position: relative;
+    padding : 2rem 0;
+
+    &__title {
+        text-align   : center;
+        font-size    : 3rem;
+        font-weight  : 900;
+        color        : #667b8e;
+        margin-bottom: 2rem;
+    }
+
+    &__image {
+        position       : relative;
+        display        : flex;
+        align-items    : center;
+        justify-content: center;
+        margin-bottom  : 1.4rem;
+
+        & img.border--left {
+            border-top-width   : 5px;
+            border-right-width : 2px;
+            border-bottom-width: 5px;
+            border-left-width  : 10px;
+            border-color       : #009f4f;
+            border-style       : solid;
+        }
+
+        & img.border--right {
+            border-top-width   : 5px;
+            border-right-width : 10px;
+            border-bottom-width: 5px;
+            border-left-width  : 2px;
+            border-color       : #DF0080;
+            border-style       : solid;
+        }
+
+        & img.border--top {
+            border-top-width   : 10px;
+            border-right-width : 5px;
+            border-bottom-width: 2px;
+            border-left-width  : 5px;
+            border-color       : #ea7f21;
+            border-style       : solid;
+        }
+
+        & img.border--bottom {
+            border-top-width   : 2px;
+            border-right-width : 5px;
+            border-bottom-width: 10px;
+            border-left-width  : 5px;
+            border-color       : #00a4e4;
+            border-style       : solid;
+        }
+    }
+
+    &__info {
+        position  : relative;
+        text-align: center;
+
+        & .programing__title {
+            font-size     : 1.4rem;
+            font-weight   : 900;
+            color         : #667b8e;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            margin-bottom : 0;
+        }
+
+        & .programing__announcer {
+            position   : relative;
+            margin     : 0;
+            font-size  : 1.4rem;
+            color      : #667b8e;
+            line-height: 1;
+        }
+
+        & .programing__hour {
+            position   : relative;
+            margin     : 0;
+            color      : #667b8e;
+            line-height: 1;
+        }
+    }
+}
+
+
+.noticies {
+    position        : relative;
+    background-color: #ededed;
+    padding         : 2rem 0;
+
+    &__title {
+        font-size    : 3.2rem;
+        font-weight  : 900;
+        color        : #667b8e;
+        text-align   : center;
+        line-height  : 1;
+        margin-bottom: 1rem;
+    }
+
+    &__slider {
+        margin-bottom: 1.3rem;
+
+        &-item {
+            -webkit-transition: 0.3s;
+            -o-transition     : 0.3s;
+            transition        : 0.3s;
+            -webkit-transform : scale(0.9);
+            -ms-transform     : scale(0.9);
+            transform         : scale(0.9);
+        }
+
+        & .owl-item.center &-item {
+            -webkit-transform: scale(1);
+            -ms-transform    : scale(1);
+            transform        : scale(1);
+        }
+    }
+
+    &__slide {
+        position           : relative;
+        display            : flex;
+        flex-direction     : column;
+        justify-content    : space-between;
+        height             : 400px;
+        border-radius      : 15px;
+        padding            : 2rem;
+        background-position: center;
+        background-repeat  : no-repeat;
+        background-size    : cover;
+
+        &::before {
+            content      : '';
+            position     : absolute;
+            top          : 0;
+            left         : 0;
+            width        : 100%;
+            height       : 100%;
+            background   : rgba(0, 0, 0, 0.3);
+            z-index      : 1;
+            border-radius: 15px;
+        }
+
+        &-header {
+            position : relative;
+            font-size: 1rem;
+            color    : #FFF;
+            z-index  : 4;
+        }
+
+        &-description {
+            position: relative;
+            z-index : 4;
+
+            &>* {
+                font-weight   : bold;
+                color         : #FFF;
+                line-height   : 1;
+                margin        : 0;
+                letter-spacing: 2px;
+            }
+        }
+    }
+
+    &__more {
+        position  : relative;
+        width     : 100%;
+        text-align: center;
+
+        & h3 {
+            font-size  : 3.2rem;
+            font-weight: 900;
+            color      : #667b8e;
+            text-align : center;
+            line-height: 1;
+            margin     : 2rem 0 0 0;
+        }
+
+        & .btn {
+            background-color: #009e51;
+            color           : #FFF;
+            font-size       : 2.5rem;
+            font-weight     : bold;
+            line-height     : 1;
+            border-radius   : 10px;
+        }
+    }
+}
+
+.sponsors {
+    position: relative;
+    width   : 100%;
+
+    &__header {
+        width           : 100%;
+        background-color: #f78421;
+        padding         : 1rem;
+    }
+
+    &__title {
+        font-size  : 3.2rem;
+        font-weight: 900;
+        line-height: 1;
+        margin     : 0;
+        color      : #FFF;
+    }
+
+    &__description {
+        font-size  : 1.3rem;
+        text-align : center;
+        color      : #FFF;
+        line-height: 1;
+        margin     : 0;
+    }
+
+    &__content {
+        padding: 2rem 0;
+    }
+}
+
+
+.footer {
+    position        : relative;
+    padding         : 3rem 0;
+    background-color: #e10082;
+
+    &__logo {
+        margin-bottom: 72px;
+    }
+
+    &__copyright {
+        position       : relative;
+        display        : flex;
+        align-items    : center;
+        justify-content: space-between;
+
+        & img {
+            max-width: 125px;
+        }
+
+        & span {
+            font-weight  : 300;
+            font-size    : .9rem;
+            color        : #FFF;
+            padding-right: 5rem;
+        }
+    }
+
+    &__border {
+        padding-left: 35px;
+
+        &::before {
+            content   : '';
+            position  : absolute;
+            top       : 0;
+            left      : 0;
+            height    : 70%;
+            width     : 1px;
+            background: #FFF;
+        }
+    }
+
+    &__social {
+        & h2 {
+            font-size  : 1.4rem;
+            color      : #FFF;
+            font-weight: bold;
+        }
+
+        & ul {
+            position  : relative;
+            margin    : 0;
+            padding   : 0;
+            list-style: none;
+            text-align: right;
+
+            & li {
+                display: inline;
+
+                & a,
+                & a:hover,
+                & a:focus {
+                    text-decoration: none;
+                }
+            }
+        }
+    }
+
+    &__address {
+        position  : relative;
+        margin-top: 1rem;
+
+        & p {
+            font-size  : .9rem;
+            color      : #FFF;
+            margin     : 0;
+            line-height: 1.2;
+            text-align : center;
+        }
+    }
+
+    &__contact {
+        position  : relative;
+        margin-top: 1rem;
+
+        & p {
+            font-size  : .9rem;
+            color      : #FFF;
+            margin     : 0;
+            line-height: 1.2;
+            text-align : center;
+        }
+    }
 }
