--- a/resources/sass/_fmbenfica.scss
+++ b/resources/sass/_fmbenfica.scss
@@ -550,3 +550,60 @@
         color      : #f78421;
     }
 }
+
+
+.page-about {
+
+    .about__hero-image {
+        position           : relative;
+        height             : 600px;
+        width              : 100%;
+        background-position: 100% 18%;
+        background-repeat  : no-repeat;
+        background-size    : cover;
+
+        &::after {
+            content   : '';
+            position  : absolute;
+            top       : 0;
+            left      : 0;
+            height    : 100%;
+            width     : 100%;
+            background: rgba(0, 0, 0, 0.3);
+            z-index   : 2;
+        }
+    }
+
+    .about__hero-dots {
+        position       : relative;
+        display        : flex;
+        align-items    : center;
+        justify-content: center;
+        width          : 100%;
+        height         : 80px;
+
+        & span {
+            width           : 15px;
+            height          : 15px;
+            border-radius   : 50%;
+            background-color: #647b8d;
+            margin          : 0 10px;
+        }
+    }
+
+    .about__title {
+        font-size    : 3.3rem;
+        color        : #647b8d;
+        font-weight  : 900;
+        text-align   : center;
+        margin-bottom: 20px;
+    }
+
+    .about__text>* {
+        text-align : justify;
+        font-size  : 1.6rem;
+        color      : #647b8d;
+        line-height: 2rem;
+        padding    : 2rem 0;
+    }
+}
