--- a/resources/sass/_fmbenfica.scss
+++ b/resources/sass/_fmbenfica.scss
@@ -611,3 +611,106 @@
         }
     }
 }
+
+.posts__hero {
+    position  : relative;
+    border-top: 6px solid #bfc1c3;
+    height    : 300px;
+
+    &-image {
+        position           : relative;
+        display            : flex;
+        align-items        : center;
+        justify-content    : center;
+        height             : 100%;
+        width              : 100%;
+        background-position: center;
+        background-repeat  : no-repeat;
+        background-size    : cover;
+
+        &::before {
+            content   : '';
+            position  : absolute;
+            top       : 0;
+            left      : 0;
+            height    : 100%;
+            width     : 100%;
+            background: rgba(0, 0, 0, 0.3);
+            z-index   : 2;
+        }
+    }
+
+    &-title {
+        position   : relative;
+        z-index    : 4;
+        font-size  : 4rem;
+        font-weight: 900;
+        color      : #FFF;
+    }
+}
+
+
+
+.posts__list {
+    position: relative;
+    padding : 3rem 0;
+}
+
+.posts-thumbnail img {
+    border-radius: 15px;
+}
+
+.posts-info__title {
+    position   : relative;
+    font-size  : 2rem;
+    font-weight: 900;
+    line-height: 1;
+    color      : #00a4e4;
+}
+
+.posts-info__author {
+    position   : relative;
+    font-size  : 1.3rem;
+    font-weight: 600;
+    line-height: 1;
+    color      : #647b8d;
+}
+
+.posts-info__date {
+    position   : relative;
+    font-size  : .8rem;
+    font-weight: 400;
+    line-height: 1;
+    color      : #647b8d;
+}
+
+.posts__link,
+.posts__link:hover {
+    text-decoration: none;
+}
+
+.posts__pagination {
+    position       : relative;
+    display        : flex;
+    justify-content: center;
+
+    & .page-numbers {
+        position     : relative;
+        font-size    : 1.3rem;
+        border       : 1px solid #e10082;
+        color        : #e10082;
+        padding      : 0.2rem .5rem;
+        border-radius: 20px;
+
+        &.current {
+            background-color: #e10082;
+            color           : #FFF;
+        }
+
+        &:hover {
+            background-color: #e10082;
+            color           : #FFF;
+            text-decoration : none;
+        }
+    }
+}
