--- a/resources/sass/_fmbenfica.scss
+++ b/resources/sass/_fmbenfica.scss
@@ -31,7 +31,6 @@
             font-size  : 1.5rem;
             margin     : 0;
             line-height: 1;
-            padding-top: 5px;
         }
 
     }
@@ -130,13 +129,18 @@
     }
 
     &__image {
-        position       : relative;
-        display        : flex;
-        align-items    : center;
-        justify-content: center;
-        margin-bottom  : 1.4rem;
+        position           : relative;
+        display            : flex;
+        align-items        : center;
+        justify-content    : center;
+        margin-bottom      : 1.4rem;
+        width              : 260px;
+        height             : 260px;
+        background-repeat  : no-repeat;
+        background-size    : cover;
+        background-position: center top;
 
-        & img.border--left {
+        &.border--left {
             border-top-width   : 5px;
             border-right-width : 2px;
             border-bottom-width: 5px;
@@ -145,7 +149,7 @@
             border-style       : solid;
         }
 
-        & img.border--right {
+        &.border--right {
             border-top-width   : 5px;
             border-right-width : 10px;
             border-bottom-width: 5px;
@@ -154,7 +158,7 @@
             border-style       : solid;
         }
 
-        & img.border--top {
+        &.border--top {
             border-top-width   : 10px;
             border-right-width : 5px;
             border-bottom-width: 2px;
@@ -163,7 +167,7 @@
             border-style       : solid;
         }
 
-        & img.border--bottom {
+        &.border--bottom {
             border-top-width   : 2px;
             border-right-width : 5px;
             border-bottom-width: 10px;
@@ -178,7 +182,7 @@
         text-align: center;
 
         & .programing__title {
-            font-size     : 1.4rem;
+            font-size     : 1.2rem;
             font-weight   : 900;
             color         : #667b8e;
             text-transform: uppercase;
@@ -189,7 +193,7 @@
         & .programing__announcer {
             position   : relative;
             margin     : 0;
-            font-size  : 1.4rem;
+            font-size  : 1.2rem;
             color      : #667b8e;
             line-height: 1;
         }
@@ -656,8 +660,13 @@
     padding : 3rem 0;
 }
 
-.posts-thumbnail img {
-    border-radius: 15px;
+.posts-thumbnail {
+    width              : 100%;
+    height             : 200px;
+    border-radius      : 15px;
+    background-repeat  : no-repeat;
+    background-position: center top;
+    background-size    : cover;
 }
 
 .posts-info__title {
